--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+.container {
+  margin: 1% auto;
+  max-width: 1280px;
+  width: 95%;
+}
+
 .btn{
 	background-color: rgb(235, 58, 95) !important;
 }
